# ecomtech

./: README  docker-compose.yaml
test_task/: dockerfile  pyproject.toml
test_task/app/: database.py  main.py  routes.py  schemas.py  settings.py
test_task/sql/: init.sql
