[project]
name = "test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "sadxyMath",email = "matvajzralko@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.135.1,<0.136.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
